<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cosmin.app.SingUp">

    <EditText
        android:id="@+id/userLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:hint="@string/hintuser"
        android:padding="20dp"/>

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userLogin"
        android:padding="20dp"
        android:hint="@string/hintpassword"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordLogin"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/loginSingUpTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/loginSingUp"
        android:layout_margin="20dp"/>



</RelativeLayout>
