<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cosmin.app.SingUp">

    <EditText
        android:id="@+id/userSingUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:hint="@string/hintuser"
        android:padding="20dp"/>

    <EditText
        android:id="@+id/passwordSingUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userSingUp"
        android:padding="20dp"
        android:hint="@string/hintpassword"/>

    <Button
        android:id="@+id/singUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordSingUp"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:text="Sing Up"/>

    <TextView
        android:id="@+id/singUpLoginTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/singUpLogin"
        android:layout_margin="20dp"/>

</RelativeLayout>
